--- a/css/custom.css
+++ b/css/custom.css
@@ -37,7 +37,7 @@ ul {
     list-style: none;
 }
 #hero {
-    background-image:url(../img/hero.jpg);
+    background-image:url(../imag/COYSI.jpg);
     height: 350px;
     background-size: cover;
 }
@@ -91,7 +91,7 @@ ul {
     display: block;
     text-indent: -9999px;
     width: 50px;
-    background-image: url(../img/lupa.png);
+    background-image: url(../imag/1.jpg);
     background-position: right center;
     background-repeat: no-repeat;
     border:none;
@@ -125,13 +125,13 @@ ul {
     }
 }
 .icono1 {
-    background-image: url(../img/icono1.png);
+    background-image: url(../imag/2.jpg);
 }
 .icono2 {
-    background-image: url(../img/icono2.png);
+    background-image: url(../imag/th.jpeg);
 }
 .icono3 {
-    background-image: url(../img/icono3.png);
+    background-image: url(../imag/COYSI2.jpg);
 }
 
 #lista-cursos .row {
