--- a/css/custom.css
+++ b/css/custom.css
@@ -125,7 +125,7 @@ ul {
     }
 }
 .icono1 {
-    background-image: url(../imag/2.jpg);
+    background-image: url(../imag/jh.jpg);
 }
 .icono2 {
     background-image: url(../imag/th.jpeg);
